fixed nav hamburger not showing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -176,6 +176,9 @@ label[for="toggleNavItem"] {
         margin-left: auto;
         margin-right: auto;
     }
+    .navHamburger {
+        display: block;
+    }
     body:has(#toggleNavItem:checked) .navItem {
         display: block;
     }
@@ -190,5 +193,4 @@ label[for="toggleNavItem"] {
         height: calc(11.5vh + 11.5vw);
         width: calc(11.5vh + 11.5vw);
     }
-    
 }
